src/parse/snapshots/albronze__parse__literal__tests__float_literals_combo-11.snap
---
source: src/parse/literal.rs
description: ""
info: 1.1asd
---
Ok(
    Float {
        significand: "1",
        fraction: "1",
        exponent: "",
        suffix: "asd",
        radix: Decimal,
    },
)
