src/parse/snapshots/albronze__parse__literal__tests__float_literals_combo-13.snap
---
source: src/parse/literal.rs
description: ""
info: 1.e5asd
---
Ok(
    Float {
        significand: "1",
        fraction: "",
        exponent: "5",
        suffix: "asd",
        radix: Decimal,
    },
)
