src/parse/snapshots/albronze__parse__literal__tests__float_literals_combo-15.snap
---
source: src/parse/literal.rs
description: ""
info: 1.asd
---
Ok(
    Float {
        significand: "1",
        fraction: "",
        exponent: "",
        suffix: "asd",
        radix: Decimal,
    },
)
