src/parse/snapshots/albronze__parse__literal__tests__float_literals_combo-16.snap
---
source: src/parse/literal.rs
description: ""
info: "1."
---
Ok(
    Float {
        significand: "1",
        fraction: "",
        exponent: "",
        suffix: "",
        radix: Decimal,
    },
)
