src/parse/snapshots/albronze__parse__literal__tests__float_literals_combo-2.snap
---
source: src/parse/literal.rs
description: ""
info: "0x1.1p5"
---
Ok(
    Float {
        significand: "1",
        fraction: "1",
        exponent: "5",
        suffix: "",
        radix: Hexadecimal,
    },
)
