src/parse/snapshots/albronze__parse__literal__tests__float_literals_combo-3.snap
---
source: src/parse/literal.rs
description: ""
info: "0x1.1asd"
---
Err(
    MissingHexExponent,
)
