src/parse/snapshots/albronze__parse__literal__tests__float_literals_combo-5.snap
---
source: src/parse/literal.rs
description: ""
info: "0x1.p5asd"
---
Ok(
    Float {
        significand: "1",
        fraction: "",
        exponent: "5",
        suffix: "asd",
        radix: Hexadecimal,
    },
)
